// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PendingBetsTable renders with bets 1`] = `
<div
  className="PendingBetsTable-component"
>
  <div
    className="pending-bets-info-table-title-text"
  >
    Pending Bets
  </div>
  <table
    className="pending-bets-info-table"
  >
    <tbody>
      <tr
        style={
          Object {
            "textAlign": "center",
          }
        }
      >
        <th>
          Bet Name
        </th>
        <th>
          Bet Amount
        </th>
      </tr>
      <tr>
        <td>
          foo
        </td>
        <td
          className="pending-bets-info-table-bet-amount"
        >
          $ 10
        </td>
      </tr>
      <tr>
        <td>
          bar
        </td>
        <td
          className="pending-bets-info-table-bet-amount"
        >
          $ 20
        </td>
      </tr>
      <tr>
        <td>
          baz
        </td>
        <td
          className="pending-bets-info-table-bet-amount"
        >
          $ 30
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`PendingBetsTable renders with no bets 1`] = `
<div
  className="PendingBetsTable-component"
>
  <div
    className="pending-bets-info-table-title-text"
  >
    Pending Bets
  </div>
  <table
    className="pending-bets-info-table"
  >
    <tbody>
      <tr
        style={
          Object {
            "textAlign": "center",
          }
        }
      >
        <th>
          Bet Name
        </th>
        <th>
          Bet Amount
        </th>
      </tr>
    </tbody>
  </table>
</div>
`;
